--- a/Miki/Languages/sv-SE.resx
+++ b/Miki/Languages/sv-SE.resx
@@ -1152,7 +1152,7 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_description_cage" xml:space="preserve">
-    <value></value>
+    <value>NICK CAGE BILDER</value>
   </data>
   <data name="miki_command_description_cat" xml:space="preserve">
     <value></value>
@@ -1173,19 +1173,19 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_description_gelbooru" xml:space="preserve">
-    <value></value>
+    <value>Gelbooru bilder till dig, din snuskiga hund</value>
   </data>
   <data name="miki_command_description_gif" xml:space="preserve">
-    <value></value>
+    <value>Gif mig alla gifs!</value>
   </data>
   <data name="miki_command_description_img" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_command_description_lewd" xml:space="preserve">
-    <value></value>
+    <value>Är det någon som är en baka hentai? Visa ditt ogillande med den här LEWD bilden.</value>
   </data>
   <data name="miki_command_description_lunch" xml:space="preserve">
-    <value></value>
+    <value>Woof woof! vad blir det till lunch?!</value>
   </data>
   <data name="miki_command_description_mania" xml:space="preserve">
     <value></value>
@@ -1209,7 +1209,7 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_description_rule34" xml:space="preserve">
-    <value></value>
+    <value>Därför det finns inget som inte har en porr version av sig själv.</value>
   </data>
   <data name="miki_command_description_safe" xml:space="preserve">
     <value></value>
@@ -1218,88 +1218,88 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_description_smug" xml:space="preserve">
-    <value></value>
+    <value>När du vinner en hearthstone match.</value>
   </data>
   <data name="miki_command_description_taiko" xml:space="preserve">
-    <value></value>
+    <value>don don don katsu don katsu don don katsu</value>
   </data>
   <data name="miki_command_usage_ask" xml:space="preserve">
-    <value></value>
+    <value>&gt;ask &lt;frågan&gt;</value>
   </data>
   <data name="miki_command_usage_bird" xml:space="preserve">
-    <value></value>
+    <value>&gt;bird</value>
   </data>
   <data name="miki_command_usage_cage" xml:space="preserve">
-    <value></value>
+    <value>&gt;cage</value>
   </data>
   <data name="miki_command_usage_cat" xml:space="preserve">
-    <value></value>
+    <value>&gt;cat</value>
   </data>
   <data name="miki_command_usage_compliment" xml:space="preserve">
-    <value></value>
+    <value>&gt;compliment</value>
   </data>
   <data name="miki_command_usage_confused" xml:space="preserve">
-    <value></value>
+    <value>&gt;confused</value>
   </data>
   <data name="miki_command_usage_ctb" xml:space="preserve">
-    <value></value>
+    <value>&gt;ctb &lt;osu användarnamn&gt;</value>
   </data>
   <data name="miki_command_usage_dog" xml:space="preserve">
-    <value></value>
+    <value>&gt;dog</value>
   </data>
   <data name="miki_command_usage_e621" xml:space="preserve">
-    <value></value>
+    <value>&gt;e621 &lt;e621 taggar&gt;</value>
   </data>
   <data name="miki_command_usage_gelbooru" xml:space="preserve">
-    <value></value>
+    <value>&gt;gelbooru &lt;gelbooru taggar&gt;</value>
   </data>
   <data name="miki_command_usage_gif" xml:space="preserve">
-    <value></value>
+    <value>&gt;gif [taggar]</value>
   </data>
   <data name="miki_command_usage_img" xml:space="preserve">
-    <value></value>
+    <value>&gt;img [taggar]</value>
   </data>
   <data name="miki_command_usage_lewd" xml:space="preserve">
-    <value></value>
+    <value>&gt;lewd</value>
   </data>
   <data name="miki_command_usage_lunch" xml:space="preserve">
-    <value></value>
+    <value>&gt;lunch</value>
   </data>
   <data name="miki_command_usage_mania" xml:space="preserve">
-    <value></value>
+    <value>&gt;mania &lt;osu användarnamn&gt;</value>
   </data>
   <data name="miki_command_usage_osu" xml:space="preserve">
-    <value></value>
+    <value>&gt;osu &lt;osu användarnamn&gt;</value>
   </data>
   <data name="miki_command_usage_pick" xml:space="preserve">
-    <value></value>
+    <value>&gt;pick &lt;alternativ1&gt;,[alternativ2],[…]</value>
   </data>
   <data name="miki_command_usage_pout" xml:space="preserve">
-    <value></value>
+    <value>&gt;pout</value>
   </data>
   <data name="miki_command_usage_pun" xml:space="preserve">
-    <value></value>
+    <value>&gt;pun</value>
   </data>
   <data name="miki_command_usage_roll" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_command_usage_roulette" xml:space="preserve">
-    <value></value>
+    <value>&gt;roulette [text]</value>
   </data>
   <data name="miki_command_usage_rule34" xml:space="preserve">
-    <value></value>
+    <value>&gt;rule34 &lt;rule34 taggar&gt;</value>
   </data>
   <data name="miki_command_usage_safe" xml:space="preserve">
-    <value></value>
+    <value>&gt;safe &lt;taggar&gt;</value>
   </data>
   <data name="miki_command_usage_slots" xml:space="preserve">
-    <value></value>
+    <value>&gt;slots &lt;antal mekos statsat&gt;</value>
   </data>
   <data name="miki_command_usage_smug" xml:space="preserve">
-    <value></value>
+    <value>&gt;smug</value>
   </data>
   <data name="miki_command_usage_taiko" xml:space="preserve">
-    <value></value>
+    <value>&gt;taiko &lt;osu användarnamn&gt;</value>
   </data>
   <data name="miki_command_description_remind" xml:space="preserve">
     <value></value>
@@ -1308,13 +1308,13 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="pasta_page_index" xml:space="preserve">
-    <value></value>
+    <value>sida {0} av {1}</value>
   </data>
   <data name="miki_command_description_createpasta" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_command_description_deletepasta" xml:space="preserve">
-    <value></value>
+    <value>Skäms du över en pasta? ta bort den med detta kommando!</value>
   </data>
   <data name="miki_command_description_editpasta" xml:space="preserve">
     <value></value>
@@ -1347,7 +1347,7 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_description_poppasta" xml:space="preserve">
-    <value></value>
+    <value>Detta kommando visar dem mest använda pastor.</value>
   </data>
   <data name="miki_command_description_searchpasta" xml:space="preserve">
     <value></value>
@@ -1359,7 +1359,7 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_usage_deletepasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;deletepasta &lt;tagg&gt;</value>
   </data>
   <data name="miki_command_usage_editpasta" xml:space="preserve">
     <value></value>
@@ -1368,40 +1368,40 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_command_usage_guildnewrival" xml:space="preserve">
-    <value></value>
+    <value>&gt;guildnewrevival</value>
   </data>
   <data name="miki_command_usage_guildprofile" xml:space="preserve">
-    <value></value>
+    <value>&gt;guildprofile</value>
   </data>
   <data name="miki_command_usage_guildtop" xml:space="preserve">
-    <value></value>
+    <value>&gt;guildtop</value>
   </data>
   <data name="miki_command_usage_guildweekly" xml:space="preserve">
-    <value></value>
+    <value>&gt;guildweekly</value>
   </data>
   <data name="miki_command_usage_infopasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;infopasta &lt;tagg&gt;</value>
   </data>
   <data name="miki_command_usage_lovepasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;lovepasta &lt;tagg&gt;</value>
   </data>
   <data name="miki_command_usage_mypasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;mypasta</value>
   </data>
   <data name="miki_command_usage_poppasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;poppasta</value>
   </data>
   <data name="miki_command_usage_searchpasta" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_command_usage_toppasta" xml:space="preserve">
-    <value></value>
+    <value>&gt;toppasta</value>
   </data>
   <data name="miki_guildweekly_insufficient_exp" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_terms_weekly" xml:space="preserve">
-    <value></value>
+    <value>Varje Vecka</value>
   </data>
   <data name="createpasta_error_no_content" xml:space="preserve">
     <value></value>
@@ -1410,19 +1410,19 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="infopasta_rating" xml:space="preserve">
-    <value></value>
+    <value>Klassning</value>
   </data>
   <data name="lunch_line" xml:space="preserve">
-    <value></value>
+    <value>Vad blir det till lunch?</value>
   </data>
   <data name="miki_blackjack" xml:space="preserve">
-    <value></value>
+    <value>Blackjack</value>
   </data>
   <data name="miki_blackjack_cards_miki" xml:space="preserve">
-    <value></value>
+    <value>Miki ({0})</value>
   </data>
   <data name="miki_blackjack_cards_you" xml:space="preserve">
-    <value></value>
+    <value>Du ({0})</value>
   </data>
   <data name="miki_blackjack_explanation" xml:space="preserve">
     <value></value>
@@ -1446,19 +1446,19 @@ Fuzzy</comment>
     <value></value>
   </data>
   <data name="miki_blackjack_win_title" xml:space="preserve">
-    <value></value>
+    <value>Du vinner!</value>
   </data>
   <data name="miki_command_description_blackjack" xml:space="preserve">
     <value></value>
   </data>
   <data name="miki_command_usage_blackjack" xml:space="preserve">
-    <value></value>
+    <value>&gt;blackjack &lt;antal mekos&gt;</value>
   </data>
   <data name="mypasta_error_no_pastas" xml:space="preserve">
     <value></value>
   </data>
   <data name="mypasta_title" xml:space="preserve">
-    <value></value>
+    <value>{0}&apos;s pastor</value>
   </data>
   <data name="pasta_error_no_arg" xml:space="preserve">
     <value></value>
