--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -509,10 +509,10 @@ Fuzzy</comment>
     <value>And the winner is: {0}</value>
   </data>
   <data name="miki_module_fun_slots_header" xml:space="preserve">
-    <value>slots</value>
+    <value>Slots</value>
   </data>
   <data name="miki_module_fun_slots_win_amount" xml:space="preserve">
-    <value>{0}🔸 has been added to your account.</value>
+    <value>{0}🔸 has been added to your account. Your new balance is `{1}`.</value>
   </data>
   <data name="miki_module_fun_slots_win_header" xml:space="preserve">
     <value>You win!</value>
@@ -1446,7 +1446,19 @@ You need atleast **{0}** experience before you can use this command on this serv
   <data name="blackjack_error_instance_exists" xml:space="preserve">
     <value>You're already playing blackjack in this channel!</value>
   </data>
-  <data name="String1" xml:space="preserve">
-    <value />
+  <data name="miki_module_admin_prune_no_messages" xml:space="preserve">
+    <value>Sorry but I couldn't find any messages to delete with that query! Try `{0}help prune` for tips out how to use this command!</value>
+  </data>
+  <data name="miki_blackjack_current_balance" xml:space="preserve">
+    <value>Your current balance is `{0}`.</value>
+  </data>
+  <data name="miki_blackjack_new_balance" xml:space="preserve">
+    <value>Your new balance is `{0}`.</value>
+  </data>
+  <data name="miki_module_fun_slots_lose_amount" xml:space="preserve">
+    <value>{0}🔸 were lost. Your new balance is `{1}`.</value>
+  </data>
+  <data name="miki_module_fun_slots_lose_header" xml:space="preserve">
+    <value>You lose!</value>
   </data>
 </root>
