Improve: mekos command
- Complied to localization.
- Added >mekos [@mention]
- Added "bal" and "meko" aliases.

--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -1561,4 +1561,13 @@ You need atleast **{0}** experience before you can use this command on this serv
   <data name="miki_error_gambling_zero_or_less" xml:space="preserve">
     <value>You must bet one or more mekos.</value>
   </data>
+  <data name="miki_module_accounts_mekos_bot" xml:space="preserve">
+    <value>You can't check a bot's mekos!</value>
+  </data>
+  <data name="miki_module_accounts_mekos_no_user" xml:space="preserve">
+    <value>Mentioned user not found!</value>
+  </data>
+  <data name="miki_user_mekos" xml:space="preserve">
+    <value>{0} has **{1}** mekos!</value>
+  </data>
 </root>
