--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -1486,9 +1486,6 @@ You need atleast **{0}** experience before you can use this command on this serv
     <value>You successfully purchased a new marriage slot, you now have {0} slots!</value>
     <comment>example: You successfully purchased a new marriage slot, you now have 12 slots!</comment>
   </data>
-  <data name="time_and" xml:space="preserve">
-    <value>and</value>
-  </data>
   <data name="time_day" xml:space="preserve">
     <value>day</value>
   </data>
@@ -1549,9 +1546,6 @@ You need atleast **{0}** experience before you can use this command on this serv
   <data name="permission_needed_error" xml:space="preserve">
     <value>Please give me the permission {0}</value>
   </data>
-  <data name="String1" xml:space="preserve">
-    <value />
-  </data>
   <data name="miki_error_gambling_no_arg" xml:space="preserve">
     <value>You can't use this command with no arguments. Please specify a bet amount.</value>
   </data>
@@ -1581,5 +1575,11 @@ You need atleast **{0}** experience before you can use this command on this serv
   </data>
   <data name="miki_user_mekos" xml:space="preserve">
     <value>{0} has **{1}** mekos!</value>
+  </data>
+  <data name="guild_error_null" xml:space="preserve">
+    <value>This guild doesn't have a profile yet.</value>
+  </data>
+  <data name="time_and" xml:space="preserve">
+    <value>and</value>
   </data>
 </root>
