Add: multiple mentions in rep
- Added way to rep multiple people in one command.
- Added "*" as a way to give all rep.
- Fixed mistyped localization string.

--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -1689,7 +1689,7 @@ To give someone reputation, do `&gt;rep &lt;mention&gt; [\"all\"|amount]`</value
     <value>Rep Point Reset</value>
   </data>
   <data name="miki_module_accounts_rep_success" xml:space="preserve">
-    <value>{0} has given {1} {2} reputation! {1} now has {3} points!</value>
+    <value>{0} has given {1} **{2}** reputation! {1} now has **{3}** points!</value>
   </data>
   <data name="miki_module_accounts_rep_total_received" xml:space="preserve">
     <value>Total Rep Received</value>
